adds demos and lab to class02

--- a/class-02-intro_js_html_css-arrays/demos/01-conditionals/index.html
+++ b/class-02-intro_js_html_css-arrays/demos/01-conditionals/index.html
@@ -2,32 +2,29 @@
 <html>
 <head>
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header></header>
-  <main></main>
+  <main>
+    <section>
+      <img src="https://via.placeholder.com/100x100" alt="" class="hidden">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti deserunt ut architecto expedita, praesentium rerum illo neque optio velit repellat blanditiis ab iusto, ipsa eum, autem accusantium dolore nemo! Quasi?</p>
+    </section>
+    <section>
+      <img src="https://via.placeholder.com/100x100" alt="" class="hidden">
+      <p id="green">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti deserunt ut architecto expedita, praesentium rerum illo neque optio velit repellat blanditiis ab iusto, ipsa eum, autem accusantium dolore nemo! Quasi?</p>
+    </section>
+    <section>
+      <img src="https://via.placeholder.com/100x100" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti deserunt ut architecto expedita, praesentium rerum illo neque optio velit repellat blanditiis ab iusto, ipsa eum, autem accusantium dolore nemo! Quasi?</p>
+    </section>
+    <section class="hidden">
+      <img src="https://via.placeholder.com/100x100" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti deserunt ut architecto expedita, praesentium rerum illo neque optio velit repellat blanditiis ab iusto, ipsa eum, autem accusantium dolore nemo! Quasi?</p>
+    </section>
+  </main>
   <footer></footer>
-  <script>
-    // var userName = prompt("What's your name?");  // Double quotes
-    // var userName = prompt('Whats your name?');  // Bad grammar
-    var userName = prompt('What\'s your name?');  // Escape character
-
-    // if (some condition evaluates to Truthy) {
-      //  Do Something
-    // } else {
-      //  Do something else
-    //  }
-
-    if (userName.length >= 3) {
-      alert('Welcome to the site, ' + userName + '.');
-    } else {
-      alert('Your name is short. Thanks, ' + userName + '.');
-    }
-
-    var userAge = prompt('How old are you?');
-    console.log(typeof(userAge));
-
-
-  </script>
+  <script src=""></script>
 </body>
 </html>
