adds demo code and lab for class07

--- a/class-07-oop-constructors-tables/demos/00-code-review/index.html
+++ b/class-07-oop-constructors-tables/demos/00-code-review/index.html
@@ -5,6 +5,10 @@
 </head>
 <body>
 
+  <header></header>
+  <main id="main-content"></main>
+  <footer></footer>
+
   <script src="app.js"></script>
 </body>
 </html>
