--- a/class-07-oop-constructors-tables/demos/01-constructors/index.html
+++ b/class-07-oop-constructors-tables/demos/01-constructors/index.html
@@ -5,6 +5,36 @@
 </head>
 <body>
 
+  <header></header>
+  <main id="main-content">
+    <!--<table>
+      <thead>
+        <tr>
+          <th></th>
+          <th>Color</th>
+          <th>Age</th>
+          <th>Ninja</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>Michaelangelo</th>
+          <td>Orange</td>
+          <td>15</td>
+          <td>True</td>
+        </tr>
+        <tr>
+          <th>Donatello</th>
+          <td>Purple</td>
+          <td>15</td>
+          <td>true</td>
+        </tr>
+      </tbody>
+      <tfoot></tfoot>
+    </table>-->
+  </main>
+  <footer></footer>
+
   <script src="app.js"></script>
 </body>
 </html>
